--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "@types/node": "^12.12.3",
     "jest": "^24.9.0",
     "ts-jest": "^24.1.0",
-    "typescript": "^3.6.4"
+    "typescript": "^3.6.4",
+    "node-rdkafka": "^2.7.1-2"
   },
   "jest": {
     "roots": [
@@ -31,8 +32,5 @@
     "transform": {
       "^.+\\.tsx?$": "ts-jest"
     }
-  },
-  "dependencies": {
-    "node-rdkafka": "^2.7.1-2"
   }
 }
