--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
     "rootDir": "src",
     "outDir": "dist",
     "esModuleInterop": true,
+    "declaration": true,
     "strict": true
   },
   "include": ["src/**/*.ts"],
