--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dist/**/*"
   ],
   "scripts": {
-    "build": "tsc",
+    "prepare": "tsc",
     "test": "jest --collectCoverage"
   },
   "repository": {
